--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -28,4 +28,4 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky
               span= current_user.email
           .dropdown-menu.dropdown-menu-right[aria-labelledby="navbarDropdown"]
             = link_to t('.settings'), profile_url, class: 'dropdown-item'
-            = link_to t('.exit'), '#todo', class: 'dropdown-item'
+            = link_to t('.exit'), public_sessions_url, method: :delete, class: 'dropdown-item'
