--- a/app/views/admin/verifications/show.html.slim
+++ b/app/views/admin/verifications/show.html.slim
@@ -2,7 +2,7 @@
 h1 #{verification.model_name.human} #{verification.id}
 .row
   .col-md-6
-    = render 'attributes', item: verification
+    = render 'attributes', item: verification, dup_documents: dup_documents, dup_names: dup_names, dup_emails: dup_emails
   .col-md-6
     = render 'documents', verification: verification
 .row
