--- a/app/views/admin/verifications/_attributes.slim
+++ b/app/views/admin/verifications/_attributes.slim
@@ -17,7 +17,7 @@ table.table.table-striped.table-hover.table-narrow
         = item.class.human_attribute_name :reason
       td.text-right
         => item.reason
-    tr
+    tr class=warining_table_class(nil, dup_documents.any?)
       th.text-right title=:document_number
           = item.class.human_attribute_name :document_number
       td.text-right
@@ -26,7 +26,7 @@ table.table.table-striped.table-hover.table-narrow
           - if dup_documents.any?
             li.list-unstyled =link_to t('.dup_documents', count: dup_documents.count), admin_verifications_path('q[document_number_eq]': item.document_number), target: '_blank'
 
-    tr
+    tr class=warining_table_class(nil, dup_names.any?)
       th.text-right title=:name
         = item.class.human_attribute_name :name
       td.text-right
@@ -35,7 +35,7 @@ table.table.table-striped.table-hover.table-narrow
           - if dup_names.any?
             li  = link_to t('.dup_names', count: dup_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
 
-    tr
+    tr class=warining_table_class(nil, dup_names.any?)
       th.text-right title=:last_name
         = item.class.human_attribute_name :last_name
       td.text-right
@@ -43,7 +43,7 @@ table.table.table-striped.table-hover.table-narrow
           li.list-unstyled = item.last_name
           - if dup_names.any?
             li= link_to t('.dup_names', count: dup_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
-    tr
+    tr class=warining_table_class(nil, dup_emails.any?)
       th.text-right' title=:email
         = item.class.human_attribute_name :email
       td.text-right
