--- a/app/views/admin/verifications/_attributes.slim
+++ b/app/views/admin/verifications/_attributes.slim
@@ -1,65 +1,66 @@
 - item = item.decorate unless item.respond_to?(:decorated?) && item.decorated?
 table.table.table-striped.table-hover.table-narrow
     tr
-      th.text-right title=:legacy_verification_id
-        = item.class.human_attribute_name :legacy_verification_id
-      td.text-right
-        => item.legacy_verification_id
+      th.text-right title=:created_at
+        = item.class.human_attribute_name :created_at
+      td.text-left
+        = item.created_at
 
     tr
       th.text-right title=:status
         = item.class.human_attribute_name :status
-      td.text-right
+      td.text-left
           = item.status
 
     tr
       th.text-right title=:reason
         = item.class.human_attribute_name :reason
-      td.text-right
-        => item.reason
-    tr
+      td.text-left
+        = item.reason
+
+    tr class=warining_table_class(nil, similar_documents.any?)
       th.text-right title=:document_number
           = item.class.human_attribute_name :document_number
-      td.text-right
-        ul
-          li.list-unstyled = item.document_number
-          - if dup_documents.any?
-            li.list-unstyled =link_to t('.dup_documents', count: dup_documents.count), admin_verifications_path('q[document_number_eq]': item.document_number), target: '_blank'
+      td.text-left
+        ul.list-unstyled
+          li = item.document_number
+          - if similar_documents.any?
+            li =link_to t('.dup_documents', count: similar_documents.count), admin_verifications_path('q[document_number_eq]': item.document_number), target: '_blank'
 
-    tr
+    tr class=warining_table_class(nil, similar_names.any?)
       th.text-right title=:name
         = item.class.human_attribute_name :name
-      td.text-right
+      td.text-left
         ul.list-unstyled
           li  = item.name
-          - if dup_names.any?
-            li  = link_to t('.dup_names', count: dup_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
-      tr
+          - if similar_names.any?
+            li  = link_to t('.dup_names', count: similar_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
+
+    tr class=warining_table_class(nil, similar_names.any?)
       th.text-right title=:last_name
         = item.class.human_attribute_name :last_name
-      td.text-right
-        ul.list-unstyled
-          li = item.last_name
-          - if dup_names.any?
-            li = link_to t('.dup_names', count: dup_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
-    tr
-      th.text-right title=:last_name
-        = item.class.human_attribute_name :last_name
-      td.text-right
+      td.text-left
         ul.list-unstyled
           li.list-unstyled = item.last_name
-          - if dup_names.any?
-            li= link_to t('.dup_names', count: dup_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
-    tr
+          - if similar_names.any?
+            li= link_to t('.dup_names', count: similar_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
+
+    tr class=warining_table_class(nil, similar_emails.any?)
       th.text-right' title=:email
         = item.class.human_attribute_name :email
-      td.text-right
+      td.text-left
         ul.list-unstyled
           li = item.email
-          - if dup_emails.any?
-            li = link_to t('.dup_emails', count: dup_names.count), admin_verifications_path('q[email_eq]': item.email), target: '_blank'
+          - if similar_emails.any?
+            li = link_to t('.dup_emails', count: similar_emails.count), admin_verifications_path('q[email_eq]': item.email), target: '_blank'
     tr
       th.text-right title=:applicant
         = item.class.human_attribute_name :applicant
-      td.text-right
-        = item.applicant
+      td.text-left
+        = link_to item.applicant, admin_applicant_path(item.applicant), target: '_blank'
+
+    tr
+      th.text-right title=:legacy_verification_id
+        = item.class.human_attribute_name :legacy_verification_id
+      td.text-left
+        = item.legacy_verification_id
