--- a/app/views/admin/verifications/show.html.slim
+++ b/app/views/admin/verifications/show.html.slim
@@ -3,7 +3,7 @@
 h1 
   = verification.model_name.human
   span.ml-1= '#' + verification.id.to_s
-  span.text-muted.text-small.ml-2= l item.created_at, format: :long
+  span.text-muted.text-small.ml-2= l verification.created_at, format: :long
 
 .row
   .col-md-6
