--- a/app/views/admin/verifications/show.html.slim
+++ b/app/views/admin/verifications/show.html.slim
@@ -7,7 +7,7 @@ h1
 
 .row
   .col-md-6
-    = render 'attributes', item: verification, similar_documents: similar_documents, similar_names: similar_names, similar_emails: similar_emails
+    = render 'attributes', verification: verification, similar_documents: similar_documents, similar_names: similar_names, similar_emails: similar_emails
   .col-md-6
     = render 'documents', verification: verification
 .row
