--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -12,17 +12,19 @@
             collection: Verification::REASONS,
             label_method: lambda { |item| t("attributes.reasons.#{item}") }
       .row
-        .col-6
+        .col-4
           = f.input :country, as: :country, priority: Rails.configuration.application.country_priority
-        .col-6
+        .col-4
           = f.input :document_number
-      .row
-        .col-6
-          = f.input :name
-        .col-6
-          = f.input :last_name
-        .col-6
+        .col-4
           = f.input :email, as: :email
+      .row
+        .col-4
+          = f.input :name
+        .col-4
+          = f.input :last_name
+        .col-4
+          = f.input :patronymic
 
       .row
         .col-md-12
