--- a/app/views/admin/verifications/_index_form.slim
+++ b/app/views/admin/verifications/_index_form.slim
@@ -4,6 +4,6 @@
 = search_form_for [:admin, q] do |f|
   .row
     .col-md-9
-      = f.input ApplicationHelper::VERIFICATION_QUERY, label: false, as: :search, hint: t('.search_hint')
+      = f.input ApplicationHelper::VERIFICATION_QUERY, label: false, as: :search, hint: t('.query_hint'), placeholder: t('.query_placeholder')
     .col-md-3
       = f.button :submit, class: 'btn btn-primary'
