--- a/app/views/admin/dashboard/index.slim
+++ b/app/views/admin/dashboard/index.slim
@@ -1,3 +1,7 @@
 .container
-  p admin dashboard
+  h2 Заявки требующие внимания
+  = render 'table', items: current_account.verifications.pending.limit(10).decorate
+
+  h2 Журнал последних событий
+  = render 'log', log_records: current_account.log_records.limit(20)
 
