--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -11,12 +11,8 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky
         li.nav-item.mr-2.d-flex.align-items-center
           = active_link_to admin_applicants_path, class: 'my-lg-0 py-lg-0 nav-link' do
             = title_with_counter t('.applicants'), current_account.applicants.count
-      ul.navbar-nav.navbar-right
-        li.nav-item.dropdown
-          = link_to t('.verification_new'), '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false
-          .dropdown-menu.dropdown-menu-right[aria-labelledby="navbarDropdown"]
-            = link_to t('.verification_new_long'), test_new_client_verification_url, class: 'dropdown-item'
-            = link_to t('.verification_new_short'), test_new_client_verification_url(short: true), class: 'dropdown-item'
+        li.nav-item.mr-2.d-flex.align-items-center
+          = link_to t('.verification_new'), test_new_client_verification_url(short: true), class: 'my-lg-0 py-lg-0 nav-link'
       ul.navbar-nav.navbar-right
         li.nav-item.dropdown
           = link_to t('.settings'), '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false
