--- a/app/views/admin/applicants/_index_form.slim
+++ b/app/views/admin/applicants/_index_form.slim
@@ -1,4 +1,6 @@
-= render 'time_form' do |f|
+= search_form_for [:admin, q] do |f|
   .row
-    .col-md-4
-      = f.input :first_name_or_last_name_or_patronymic_cont
+    .col-md-9
+      = f.input ApplicationHelper::APPLICANT_QUERY, label: false, as: :search, hint: t('.query_hint'), placeholder: t('.query_placeholder')
+    .col-md-3
+      = f.button :submit, class: 'btn btn-primary'
