--- a/app/views/verification_mailer/refused.slim
+++ b/app/views/verification_mailer/refused.slim
@@ -2,4 +2,4 @@ h2 Добрый день!
 
 p Уважаемый #{@verification.last_name} #{@verification.name}, вы не прошли верификацию у #{@account.name}.
 
-p Комментарий: #{@verification.user_comment}
+p Комментарий: #{@verification.public_comment}
