--- a/app/views/admin/verifications/_documents.slim
+++ b/app/views/admin/verifications/_documents.slim
@@ -1,5 +1,8 @@
-table.table.table-striped.table-hover.table-narrow
-  tr.thead-dark
+ul.list-unstyled
   - verification.documents.each do |document|
-    tr
-      th =image_or_video document.url
+    li
+      - if document.video?
+        = tag.video(tag.source(src: url), controls: 'controls')
+      - else
+        = link_to document.url, target: '_blank'
+          = image_tag document.url, style: 'max-width: 100px; max-height: 100px'
