--- a/app/views/admin/verifications/_documents.slim
+++ b/app/views/admin/verifications/_documents.slim
@@ -1,8 +1,6 @@
 ul.list-unstyled
   - verification.documents.each do |document|
     li
-      - if document.video?
-        = tag.video(tag.source(src: url), controls: 'controls')
-      - else
-        = link_to document.url, target: '_blank'
-          = image_tag document.url, style: 'max-width: 100px; max-height: 100px'
+      -# = tag.video(tag.source(src: url), controls: 'controls')
+      = link_to document.url, target: '_blank'
+        = image_tag document.thumb.url, style: 'max-width: 120px; max-height: 100px'
