Add gem rmagick

--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -40,7 +40,7 @@
       .row
         .col-12
           .text-center
-            = f.submit class: 'btn btn-lg btn-primary'
+            = f.submit class: 'btn btn-lg btn-primary', data: { 'disable-width' => 'Отправляю..' }
       .row.mt-4
         .col-md-12
           .alert.alert-warning role='alert'
