Improve verification page

--- a/app/views/admin/applicants/show.slim
+++ b/app/views/admin/applicants/show.slim
@@ -5,5 +5,5 @@ h1 #{record.model_name.human} ##{record.id}
     = render 'attributes', item: record
   .col-md-6
     = render partial: 'log', locals: {record: record}
-= render partial: 'admin/applicants/block_form', locals: {applicant: record}
+= render partial: 'buttons', locals: {applicant: record}
 = render partial: 'verifications', locals: {applicant: record}
