--- a/app/views/admin/verifications/_documents.slim
+++ b/app/views/admin/verifications/_documents.slim
@@ -1,6 +1,5 @@
-ul.list-unstyled
-  - verification.documents.each do |document|
-    li.mb-2
-      -# = tag.video(tag.source(src: url), controls: 'controls')
-      = link_to document.url, target: '_blank'
-        = image_tag document.thumb.url, style: 'max-width: 120px; max-height: 100px'
+- verification.documents.each do |document|
+  .card style='width: 120px'
+    -# = tag.video(tag.source(src: url), controls: 'controls')
+    = link_to document.url, target: '_blank'
+      = image_tag document.thumb.url, style: 'max-width: 120px; max-height: 100px', class: 'card-img-top'
