--- a/app/views/admin/verifications/_header.slim
+++ b/app/views/admin/verifications/_header.slim
@@ -1,31 +1,35 @@
 .row
-  .col-md-3 class=bg_warning_class(similar_names.any?)
+  .col-md-3 
     .text-muted= verification.class.human_attribute_name :full_name
     ul.list-unstyled
-      li= verification.full_name
+      li
+        = warning_flag similar_names.any?
+        = verification.full_name
       - if similar_names.any?
         li
           = link_to t('.similar_names', count: similar_names.count), 
             admin_verifications_path('q[name_eq]': verification.name, 'q[last_name_eq]': verification.last_name), 
             target: '_blank'
-  .col-md-3 class=bg_warning_class(similar_documents.any?)
+  .col-md-3
     .text-muted= verification.class.human_attribute_name :document_number
     ul.list-unstyled
-      li = verification.document_number
+      li
+        = warning_flag similar_documents.any?
+        = verification.document_number
       - if similar_documents.any?
         li =link_to t('.similar_documents', count: similar_documents.count), admin_verifications_path('q[document_number_eq]': verification['document_number']), target: '_blank'
-  .col-md-2 class=bg_warning_class(similar_emails.any?)
+  .col-md-2
     .text-muted= verification.class.human_attribute_name :email
     ul.list-unstyled
-      li = verification.email
+      li 
+        = warning_flag similar_emails.any?
+        = verification.email
       - if similar_emails.any?
         li = link_to t('.similar_emails', count: similar_emails.count), admin_verifications_path('q[email_eq]': verification.email), target: '_blank'
   .col-md-2
     .text-muted= verification.class.human_attribute_name :reason
     = verification.reason
-
   .col-md-2
     .text-muted= verification.class.human_attribute_name :applicant
     = link_to verification.applicant, admin_applicant_path(verification.applicant)
     = render 'admin/applicants/buttons', applicant: verification.applicant
-
