Fix attention applications in dashboard

--- a/app/views/admin/dashboard/index.slim
+++ b/app/views/admin/dashboard/index.slim
@@ -1,6 +1,6 @@
 .container
   h2 Заявки требующие внимания
-  = render 'table', items: current_account.verifications.pending.limit(10).decorate
+  = render 'table', items: current_account.verifications.pending.order('created_at desc').limit(10).decorate
 
   h2 Журнал последних событий
   = render 'log', log_records: current_account.log_records.limit(20)
