--- a/app/views/admin/verifications/_header.slim
+++ b/app/views/admin/verifications/_header.slim
@@ -1,5 +1,9 @@
 .row
-  .col-md-3 
+  .col-md-2
+    .text-muted= verification.class.human_attribute_name :created_at
+    div title=l(verification.object.created_at, format: :long)
+      = distance_of_time_in_words verification.object.created_at
+  .col-md-2 
     .text-muted= verification.class.human_attribute_name :full_name
     ul.list-unstyled
       li
@@ -10,7 +14,7 @@
           = link_to t('.similar_names', count: similar_names.count), 
             admin_verifications_path('q[name_eq]': verification.name, 'q[last_name_eq]': verification.last_name), 
             target: '_blank'
-  .col-md-3
+  .col-md-2
     .text-muted= verification.class.human_attribute_name :document_number
     ul.list-unstyled
       li
@@ -28,7 +32,7 @@
         li = link_to t('.similar_emails', count: similar_emails.count), admin_verifications_path('q[email_eq]': verification.email), target: '_blank'
   .col-md-2
     .text-muted= verification.class.human_attribute_name :reason
-    = verification.reason
+    .badge.badge-info= verification.reason
   .col-md-2
     .text-muted= verification.class.human_attribute_name :applicant
     = link_to verification.applicant, admin_applicant_path(verification.applicant)
