--- a/app/views/admin/verifications/_reason_filter.slim
+++ b/app/views/admin/verifications/_reason_filter.slim
@@ -5,7 +5,7 @@ ul.nav.nav-pills.mb-3
     - klass = active_class('nav-link', status_from_query == reason.to_s)
     li.nav-item
       = link_to url, class: klass do
-        = title_with_counter t("reason.#{reason}"), current_account.verifications.by_reason(reason).count
+        = title_with_counter t("reason.#{reason}"), statused_verifications.by_reason(reason).count
   li.nav-item
     = link_to admin_verifications_path(q: request.query_parameters.fetch(:q, {}).except(:reason_eq)), class: active_class('nav-link', status_from_query.nil?) do
       = title_with_counter t('reason.all'), current_account.verifications.count
