--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -20,12 +20,4 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky
             = link_to t('.admins'), admin_members_path, class: 'dropdown-item'
             = link_to t('.review_result_labels'), admin_review_result_labels_path, class: 'dropdown-item'
             = link_to t('.profile'), admin_account_path, class: 'dropdown-item'
-        li.nav-item.dropdown
-          = link_to '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false do
-            = gravatar_tag current_user.email,
-              size: 32
-            span.ml-2
-              span= current_user.email
-          .dropdown-menu.dropdown-menu-right[aria-labelledby="navbarDropdown"]
-            = link_to t('.settings'), profile_url, class: 'dropdown-item'
-            = link_to t('.exit'), public_sessions_url, method: :delete, class: 'dropdown-item'
+        = render 'user_dropdown'
