--- a/app/views/public/landing/_navbar.html.slim
+++ b/app/views/public/landing/_navbar.html.slim
@@ -7,9 +7,9 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky
       ul.navbar-nav.mr-auto
         - if logged_in?
           li.nav-item.dropdown
-            = link_to t('.accounts'), '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false
-            .dropdown-menu.dropdown-menu-right[aria-labelledby="navbarDropdown"]
+            = link_to t('.accounts'), '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :accountsDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false
+            .dropdown-menu.dropdown-menu-right[aria-labelledby="accountsDropdown"]
               - current_user.accounts.each do |account|
-                li= link_to account.name, admin_root_url(subdomain: account.subdomain) , class: 'dropdown-item'
+                = link_to account.name, admin_root_url(subdomain: account.subdomain) , class: 'dropdown-item'
       ul.navbar-nav.navbar-right
         = render 'user_dropdown'
