--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -4,5 +4,12 @@
     p.lead Я - Агнесса, KYC-Сервис. Я помогаю провести быструю идентификацию и узнать Вашего клиента.
     hr.my-4
     p Агнесса, пока, работает в закрытом режиме.
-    .mt-2
-      = link_to 'Вход для зарегистрированных', new_public_session_url, class: 'btn btn-primary btn-lg', role: :button
+    .mt-4
+      - if logged_in?
+        = link_to 'Вход для зарегистрированных', new_public_session_url, class: 'btn btn-primary btn-lg', role: :button
+      - else
+        p Перейдите в нужный аккаунт
+        ul
+          - current_user.accounts.each do |account|
+            li= link_to account.name, admin_root_url(subdomain: account.subdomain) , class: 'dropdown-item'
+
