--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -7,8 +7,9 @@
     .mt-4
       - if logged_in?
         p Перейдите в нужный аккаунт
-        ul
+        nav.nav.flex-column
           - current_user.accounts.each do |account|
-            li= link_to account.name, admin_root_url(subdomain: account.subdomain) , class: 'dropdown-item'
+            li.nav-item
+              = link_to account.name, admin_root_url(subdomain: account.subdomain) , class: 'nav-link'
       - else
         = link_to 'Вход для зарегистрированных', new_public_session_url, class: 'btn btn-primary btn-lg', role: :button
